--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Account login</h1>
             <input type="text" name="username" placeholder="User name">
             <input type="password" name="password" placeholder="Password">
-            <a href="#">Sign in</a>
+            <button>Sign in</button>
             <p>Forgot <a href="#">User name / password?</a></p>
             <a href="#">Sign up</a>
         </div>
